--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ description = "Golem Process Manager"
 
 [dependencies]
 gprocess-proto = { path = "gprocess-proto" }
-axum.workspace = true
+anyhow.workspace = true
 clap.workspace = true
 futures.workspace = true
+nix.workspace = true
+prost.workspace = true
 shadow-rs.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
@@ -26,15 +28,25 @@ shadow-rs.workspace = true
 [workspace]
 members = ["gprocess-proto"]
 
+[[bin]]
+name = "sample-cli"
+path = "bin/sample-cli.rs"
+
+[[bin]]
+name = "sample-testd"
+path = "bin/testd.rs"
+
 [workspace.dependencies]
-axum = { version = "0.7.5", features = ["ws"] }
+anyhow = "1.0.86"
 bytes = "1.7.1"
-clap = { version = "4.5.13", features = ["cargo"] }
+clap = { version = "4.5.15", features = ["cargo"] }
 futures = "0.3.30"
+nix = { version = "0.29.0", features = ["process", "signal"] }
 prost = "0.13.1"
 prost-build = "0.13.1"
 prost-types = "0.13.1"
 shadow-rs = "0.31.1"
+thiserror = "1.0.63"
 tokio = { version = "1.39.2", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
