--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "gm-tests",
-  "module": "src/index.ts",
-  "type": "module",
-  "bin": "src/index.ts",
-  "devDependencies": {
-    "bun-types": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "ts-proto": "^1.181.1"
-  },
-  "scripts": {
-    "prepare": "cp ../gprocess-proto/protos/gprocess.proto . && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=src/ --ts_proto_opt=oneof=unions ./gprocess.proto",
-    "start": "bun run ./src/index.ts"
-  }
+    "name": "gprocess-man-client",
+    "version": "0.0.0",
+    "description": "gprocess-man JS client",
+    "private": true,
+    "files": ["lib"],
+    "main": "lib/index.js",
+    "dependencies": {
+        "ts-proto": "1.181"
+    },
+    "devDependencies": {
+        "@types/node": "22.5",
+        "rimraf": "6.0",
+        "ts-node": "10.9",
+        "typescript": "5.5"
+    },
+    "scripts": {
+        "build": "tsc",
+        "start": "node lib/example.js",
+        "dev": "ts-node src/example.ts",
+        "clean": "rimraf lib"
+    }
 }
