--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,9 @@
     },
     "scripts": {
         "build": "tsc",
+        "build:proto": "cp ../gprocess-proto/protos/gprocess.proto . && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=src/ --ts_proto_opt=oneof=unions ./gprocess.proto",
         "start": "node lib/example.js",
         "dev": "ts-node src/example.ts",
-        "clean": "rimraf lib"
+        "clean": "rimraf lib gprocess.proto"
     }
 }
