--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
     "private": true,
     "files": ["lib"],
     "main": "lib/index.js",
+    "imports": {
+        "#lib": "./src/index.ts"
+    },
     "dependencies": {
         "ts-proto": "1.181"
     },
@@ -18,7 +21,6 @@
         "build": "tsc",
         "build:proto": "cp ../gprocess-proto/protos/gprocess.proto . && protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=src/ --ts_proto_opt=oneof=unions ./gprocess.proto",
         "start": "node lib/example.js",
-        "dev": "ts-node src/example.ts",
         "clean": "rimraf lib gprocess.proto"
     }
 }
