--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,5 +26,8 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true
 	},
-	"files": ["src/index.ts"]
+	"files": [
+		"src/index.ts",
+		"src/browser.ts"
+	]
 }
